@@ -4,7 +4,7 @@ PROJECT(UcanvcamModules)
 FIND_PACKAGE(YARP REQUIRED)
 
 BEGIN_DEVICE_LIBRARY(vcammod)
-    ADD_SUBDIRECTORY(wxsdl)
+    #ADD_SUBDIRECTORY(wxsdl)
     ADD_SUBDIRECTORY(vdub)
     IF (UNIX)
       # make sure we have the ffmpeg device
